# remodel-ai

./: .gitignore  Dockerfile  README.md
remodel-ai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STATUS.md  Procfile  comprehensive_test.py  config.py  config.py.backup  context_bundle.txt  main.py  pyproject.toml  railway.toml  requirements.txt  requirements.txt.minimal  schemas.py  start.sh  task_5_golden_test_dataset.md  test_api.py  test_chat_flow.py  test_context_prompt.py  test_context_rating.py  test_env.py  test_env_with_dotenv.py  test_estimates.py  test_performance.py  test_simple.py  vercel.json
remodel-ai-backend/api/: chat.py  estimate.py  export.py
remodel-ai-backend/middleware/: cache.py
remodel-ai-backend/scripts/: load_data.py  verify_pinecone.py
remodel-ai-backend/scripts/evaluation/: baseline_evaluation_report.md  baseline_ragas_metrics.json  baseline_responses.json  generate_test_queries.py  run_ragas_evaluation.py  run_ragas_evaluation_api.py  run_ragas_evaluation_fixed.py  test_queries.json  visualize_metrics.py
remodel-ai-backend/scripts/training/: check_dataset_columns.py  fix_and_upload_dataset.py  generate_training_pairs.py  train_local.py  train_local_v2.py  train_pairs.json  upload_to_huggingface.py  val_pairs.json
remodel-ai-backend/services/: chat_service.py  chat_service_backup.py  city_mappings.py  context_manager.py  context_manager.py.backup  estimate_service.py  material_price_service.py  pdf_service.py  rag_service.py  session_service.py
remodel-ai-backend/tests/: test_rag_service.py  test_schemas.py
(+46 files in other folders)
