[project]
name = "remodel-ai-backend"
version = "0.1.0"
description = "AI-powered construction cost estimation API"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "openai",
    "pinecone-client",
    "pandas",
    "numpy",
    "reportlab",
    "httpx",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "google-search-results",
    "pytest",
    "pytest-asyncio",
    "python-multipart"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["api", "services", "remodel_ai_backend"]
[tool.hatch.build]
include = [
    "*.py",
    "api/*.py",
    "services/*.py",
    "scripts/*.py",
    "remodel_ai_backend/*.py"
]
[tool.uv]
managed = true